<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/infoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp">

            <TextView
                android:id="@+id/beneficiaire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/beneficiaire"
                android:paddingHorizontal="@dimen/_5sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/montant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/montant_transfere"
                android:paddingHorizontal="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/beneficiaire"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:id="@+id/operateur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/operateur"
                android:paddingHorizontal="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/montant"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/date_operation"
                android:paddingHorizontal="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/operateur"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/date_execution"
                android:paddingHorizontal="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/date"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="En cours"
                android:paddingHorizontal="@dimen/_5sdp"
                android:textColor="@color/statusEnCoursColor"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/message"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
